--- a/sales_selling_price.html
+++ b/sales_selling_price.html
@@ -270,26 +270,168 @@
                       <div class="inner_box_title">Price List Components</div>
                       <div class="content_inner_box">
                         <div class="row">
-                          <div class="col-sm-6"></div>
-                          <div class="col-sm-6"></div>
+                          <div class="col-sm-6">
+                            <div class="field_container padd_up_cutter">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox2">
+                                <input type="checkbox" id="checkbox2" class="mdl-checkbox__input">
+                                <span class="mdl-checkbox__label">Select Description Change</span>
+                              </label>
+                            </div>
+                          </div>
+                          <div class="col-sm-6">
+                            <div class="field_container padd_up_cutter">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox3">
+                                <input type="checkbox" id="checkbox3" class="mdl-checkbox__input">
+                                <span class="mdl-checkbox__label">Description Change</span>
+                              </label>
+                            </div>
+                          </div>
                         </div>
                         <div class="row">
-                          <div class="col-sm-6"></div>
-                          <div class="col-sm-6"></div>
+                          <div class="col-sm-6">
+                            <div class="field_container padd_up_cutter">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox4">
+                                <input type="checkbox" id="checkbox4" class="mdl-checkbox__input">
+                                <span class="mdl-checkbox__label">Select Cost Change</span>
+                              </label>
+                            </div>
+                          </div>
+                          <div class="col-sm-6">
+                            <div class="field_container padd_up_cutter">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox5">
+                                <input type="checkbox" id="checkbox5" class="mdl-checkbox__input">
+                                <span class="mdl-checkbox__label">Cost Change</span>
+                              </label>
+                            </div>
+                          </div>
                         </div>
                         <div class="row">
-                          <div class="col-sm-6"></div>
-                          <div class="col-sm-6"></div>
+                          <div class="col-sm-6">
+                            <div class="field_container padd_up_cutter">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox6">
+                                <input type="checkbox" id="checkbox6" class="mdl-checkbox__input">
+                                <span class="mdl-checkbox__label">Select UOM</span>
+                              </label>
+                            </div>
+                          </div>
+                          <div class="col-sm-6">
+                            <div class="field_container padd_down_cutter padd_up_cutter">
+                              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
+                                <input type="text" value="" class="mdl-textfield__input" id="outerDrop7" readonly>
+                                <input type="hidden" value="" name="outerDrop7">
+                                <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+                                <label for="outerDrop7" class="mdl-textfield__label">Packet</label>
+                                <ul for="outerDrop7" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+                                    <li class="mdl-menu__item" data-val="DEU">Option 1</li>
+                                    <li class="mdl-menu__item" data-val="BLR">Option 2</li>
+                                    <li class="mdl-menu__item" data-val="RUS">Option 3</li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
                         </div>
                         <div class="row">
-                          <div class="col-sm-6"></div>
-                          <div class="col-sm-6"></div>
+                          <div class="col-sm-6">
+                            <div class="field_container padd_up_cutter">
+                              <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox7">
+                                <input type="checkbox" id="checkbox7" class="mdl-checkbox__input">
+                                <span class="mdl-checkbox__label">Select Selling Price Type</span>
+                              </label>
+                            </div>
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="row">
-                    
+                    <div class="col-sm-12">
+                      <div class="inner_box_title">Selling Price Type</div>
+                      <div class="content_inner_box">
+                        <div class="row">
+                          <div class="col-sm-6">
+                            <div class="field_container padd_down_cutter">
+                              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
+                                <input type="text" value="" class="mdl-textfield__input" id="outerDrop8" readonly>
+                                <input type="hidden" value="" name="outerDrop8">
+                                <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+                                <label for="outerDrop8" class="mdl-textfield__label">Selling Price Type</label>
+                                <ul for="outerDrop8" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+                                    <li class="mdl-menu__item" data-val="DEU">Option 1</li>
+                                    <li class="mdl-menu__item" data-val="BLR">Option 2</li>
+                                    <li class="mdl-menu__item" data-val="RUS">Option 3</li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-sm-6">
+                            <div class="field_container padd_down_cutter">
+                              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
+                                <input type="text" value="" class="mdl-textfield__input" id="outerDrop9" readonly>
+                                <input type="hidden" value="" name="outerDrop9">
+                                <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+                                <label for="outerDrop9" class="mdl-textfield__label">Operator</label>
+                                <ul for="outerDrop9" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+                                    <li class="mdl-menu__item" data-val="DEU">Option 1</li>
+                                    <li class="mdl-menu__item" data-val="BLR">Option 2</li>
+                                    <li class="mdl-menu__item" data-val="RUS">Option 3</li>
+                                </ul>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                        <div class="row">
+                          <div class="col-sm-6">
+                            <div class="field_container padd_up_cutter">
+                              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                                <input class="mdl-textfield__input" type="text" id="sample3">
+                                <label class="mdl-textfield__label" for="sample3">MarkUp Per</label>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="col-sm-6">
+                            <div class="field_container padd_up_cutter">
+                              <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                                <input class="mdl-textfield__input" type="text" id="sample3">
+                                <label class="mdl-textfield__label" for="sample3">Fixed Price</label>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-sm-3">
+                      <div class="field_container padd_down_cutter">
+                        <label class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect" for="checkbox1">
+                          <input type="checkbox" id="checkbox1" class="mdl-checkbox__input" checked>
+                          <span class="mdl-checkbox__label">Select Tax Group</span>
+                        </label>
+                      </div>
+                    </div>
+                    <div class="col-sm-5">
+                      <div class="field_container padd_down_cutter">
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label getmdl-select">
+                            <input type="text" value="" class="mdl-textfield__input" id="outerDrop10" readonly>
+                            <input type="hidden" value="" name="outerDrop10">
+                            <i class="mdl-icon-toggle__label material-icons">keyboard_arrow_down</i>
+                            <label for="outerDrop10" class="mdl-textfield__label">Search Items By</label>
+                            <ul for="outerDrop10" class="mdl-menu mdl-menu--bottom-left mdl-js-menu">
+                                <li class="mdl-menu__item" data-val="DEU">Option 1</li>
+                                <li class="mdl-menu__item" data-val="BLR">Option 2</li>
+                                <li class="mdl-menu__item" data-val="RUS">Option 3</li>
+                            </ul>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-sm-4">
+                      <div class="field_container padd_down_cutter paddTop_30">
+                        <!-- Accent-colored raised button with ripple -->
+                        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                          Tax Group Change
+                        </button>
+                      </div>
+                    </div>
                   </div>
                 </div>
                 <div class="col-sm-6">
